--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto+Serif:opsz,wght@8..144,600&display=swap");
 
+$nav-hover-effect:linear-gradient(
+  to right,
+  rgba(192, 48, 79, 1),
+  rgba(192, 48, 79, 1) 70%,
+  white 70%,
+  white 80%,
+  rgba(192, 48, 79, 1) 80%,
+  rgba(192, 48, 79, 1)
+);
+
 * {
   margin: 0px;
   padding: 0px;
@@ -8,15 +18,6 @@
 
 .font-family-heading {
   font-family: Roboto serif;
-}
-
-.ministries-heading {
-  font-size: 30px;
-  width: 100%;
-}
-
-.nav-hr {
-  gap: 18% !important;
 }
 
 .padding-body {
@@ -35,6 +36,35 @@
   font-size: 12px;
 }
 
+.pink-background {
+  background-color: #c0304f;
+}
+
+.cursour-class {
+  cursor: pointer;
+}
+
+/*nav-bar*/
+
+.nav-list {
+  &:hover {
+    border-bottom: 3px solid;
+    border-image: $nav-hover-effect;
+    border-image-slice: 1;
+    cursor: pointer;
+  }
+}
+
+.dup-logo {
+  position: absolute;
+  top: 2%;
+  right: 15%;
+}
+
+.nav-hr {
+  gap: 19%;
+}
+
 .rose {
   right: -4.5%;
   bottom: -30%;
@@ -45,9 +75,11 @@
   top: 160%;
 }
 
+/*ministries*/
+
 .ministries {
   .ministries-bg {
-    background-color: #ffe6e0 !important;
+    background-color: #ffe6e0 ;
   }
   .ministries-border {
     border-radius: 2rem 2rem 2rem 0rem;
@@ -62,6 +94,21 @@
     bottom: 6%;
   }
 }
+
+.ministries-heading {
+  font-size: 30px;
+  width: 100%;
+}
+
+/*page-control*/
+.page-control {
+  height: 40px;
+  width: 40px;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+}
+
+/*footer*/
 
 .footer {
   background: url("images/footer/footer.png");
@@ -81,48 +128,10 @@ table {
   }
 }
 
-.nav-list {
-  &:hover {
-    border-bottom: 3px solid;
-    border-image: linear-gradient(
-      to right,
-      rgba(192, 48, 79, 1),
-      rgba(192, 48, 79, 1) 70%,
-      white 70%,
-      white 80%,
-      rgba(192, 48, 79, 1) 80%,
-      rgba(192, 48, 79, 1)
-    );
-    border-image-slice: 1;
-    cursor: pointer;
-  }
-}
-
-.pink-background {
-  background-color: #c0304f;
-}
-
-.page-control {
-  height: 40px;
-  width: 40px;
-  border-radius: 5px;
-  border: 1px solid #dddddd;
-}
-
 .footer-statue {
   top: -63%;
   right: 1%;
   width: 20%;
-}
-
-.cursour-class {
-  cursor: pointer;
-}
-
-.dup-logo {
-  position: absolute;
-  top: 2%;
-  right: 15%;
 }
 
 .dup-logo {
@@ -132,6 +141,10 @@ table {
 .input-bg {
   background-color: #626366;
   outline: none;
+}
+
+.shine-events > .col > .card{
+  box-shadow:  34px 50px -17px rgba(2, 22, 5, 0.5);
 }
 
 @media (min-width: 552px) {
